welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:5: error: reassignment to val
  else if (a=b=c) {
            ^greenTicket:8: error: reassignment to val
  else if (a=b || b=c || c=a) {
            ^greenTicket:8: error: type mismatch;
 found   : Unit
 required: Int
  else if (a=b || b=c || c=a) {
       ^