welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {
  if (a!=b && b!=c && a!=c) {
    return 0
  }
  else if (a=b=c) {
    return 20
  }
  else if (a=b || b=c || c=a) {
    return 10
  }
}